[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/EditPart.gd" type="Script" id=1]
[ext_resource path="res://ui/ItemList.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/textures/bar2_fg.png" type="Texture" id=3]
[ext_resource path="res://ui/textures/bar2_bg.png" type="Texture" id=4]
[ext_resource path="res://ui/textures/bar2_fill.png" type="Texture" id=5]

[node name="EditPart" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 512 )
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="Header" type="Label" parent="Content"]
margin_right = 1266.0
margin_bottom = 14.0
text = "EDIT PART"

[node name="Body" type="HBoxContainer" parent="Content"]
margin_top = 18.0
margin_right = 1266.0
margin_bottom = 706.0
size_flags_vertical = 3

[node name="PartList" parent="Content/Body" instance=ExtResource( 2 )]
margin_right = 256.0
margin_bottom = 688.0
size_flags_horizontal = 1

[node name="Info" type="VBoxContainer" parent="Content/Body"]
margin_left = 260.0
margin_right = 274.0
margin_bottom = 688.0

[node name="Preview" type="PanelContainer" parent="Content/Body/Info"]
margin_right = 14.0
margin_bottom = 14.0

[node name="Stats" type="PanelContainer" parent="Content/Body/Info"]
margin_top = 18.0
margin_right = 14.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Content/Body/Info/Stats"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 21.0

[node name="Tuning" type="VBoxContainer" parent="Content/Body"]
margin_left = 278.0
margin_right = 462.0
margin_bottom = 688.0

[node name="Content" type="VBoxContainer" parent="Content/Body/Tuning"]
margin_right = 184.0
margin_bottom = 136.0

[node name="Header" type="Label" parent="Content/Body/Tuning/Content"]
margin_right = 184.0
margin_bottom = 14.0
text = "Header Text"

[node name="Body" type="Label" parent="Content/Body/Tuning/Content"]
margin_top = 18.0
margin_right = 184.0
margin_bottom = 32.0
text = "Body Text"

[node name="BtnBuy" type="Button" parent="Content/Body/Tuning/Content"]
margin_top = 36.0
margin_right = 184.0
margin_bottom = 56.0
text = "Buy"

[node name="ModList" type="GridContainer" parent="Content/Body/Tuning/Content"]
margin_top = 60.0
margin_right = 184.0
margin_bottom = 136.0
columns = 4

[node name="Mod11" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label11" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 20.0
margin_top = 1.0
margin_right = 90.0
margin_bottom = 15.0
text = "Mod Name"

[node name="Mod12" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 94.0
margin_right = 110.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label12" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 114.0
margin_top = 1.0
margin_right = 184.0
margin_bottom = 15.0
text = "Mod Name"

[node name="Mod21" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label21" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 20.0
margin_top = 21.0
margin_right = 90.0
margin_bottom = 35.0
text = "Mod Name"

[node name="Mod22" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 94.0
margin_top = 20.0
margin_right = 110.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label22" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 114.0
margin_top = 21.0
margin_right = 184.0
margin_bottom = 35.0
text = "Mod Name"

[node name="Mod31" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_top = 40.0
margin_right = 16.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label31" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 20.0
margin_top = 41.0
margin_right = 90.0
margin_bottom = 55.0
text = "Mod Name"

[node name="Mod32" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 94.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label32" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 114.0
margin_top = 41.0
margin_right = 184.0
margin_bottom = 55.0
text = "Mod Name"

[node name="Mod41" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_top = 60.0
margin_right = 16.0
margin_bottom = 76.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label41" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 20.0
margin_top = 61.0
margin_right = 90.0
margin_bottom = 75.0
text = "Mod Name"

[node name="Mod42" type="TextureProgress" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 94.0
margin_top = 60.0
margin_right = 110.0
margin_bottom = 76.0
rect_min_size = Vector2( 16, 16 )
max_value = 1.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Label42" type="Label" parent="Content/Body/Tuning/Content/ModList"]
margin_left = 114.0
margin_top = 61.0
margin_right = 184.0
margin_bottom = 75.0
text = "Mod Name"

[node name="BtnConfirm" type="Button" parent="Content/Body/Tuning"]
margin_top = 140.0
margin_right = 184.0
margin_bottom = 160.0
text = "Confirm"

[node name="BtnCancel" type="Button" parent="Content/Body/Tuning"]
margin_top = 164.0
margin_right = 184.0
margin_bottom = 184.0
text = "Cancel"

[connection signal="item_selected" from="Content/Body/PartList" to="." method="_on_PartList_item_selected"]
[connection signal="pressed" from="Content/Body/Tuning/BtnConfirm" to="." method="_on_BtnConfirm_pressed"]
[connection signal="pressed" from="Content/Body/Tuning/BtnCancel" to="." method="_on_BtnCancel_pressed"]
